# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  Readme.md
include/CHIP-8/: cpu.h  disassembler.h  display.h  io.h  timer.h
src/: cpu.cpp  disassembler.cpp  display.cpp  io.cpp  main.cpp  timer.cpp
